@@ -11,6 +11,7 @@ BUGFIX:
 * type=address-merger | bugfix to not delete TAG object from upperlevel if TAG object with same name exist at childDG
 * type=address/service actions=move | bugfix if group with same name already exist - correctly skip movement
 * class PANConf | fix for PHP 8.2
+* type=address/service actions=move:shared location=any - bugfix for Firewall config
 
 GENERAL:
 * develop pan-os-php-api | per default enable shadow-json checkbox  - with shadow-nojson, output has a bug and filter are not working correctly - fixing later
